<resources>
    <string name="app_name">Tribies</string>
    <string name="title_activity_login">Tribies</string>
    <string name="slogan">Bueno, bonito, barato...</string>
    <string name="facebook_app_id">2jmj7l5rSw0yVb/vlWAYkK/YBwk=s</string>
    <string name="google_app_id">AIzaSyDGy7mlZLt33Y2C7QOTIFObWuZM2Os8ysY</string>

    <!-- Strings related to login -->
    <string name="prompt_full_name">Nombre Completo</string>
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_phone">Telefono</string>
    <string name="prompt_password">Contraseña (opcional)</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="registrate">Registrate</string>
    <string name="prompt_login_credential">Correo electronico</string>
    <string name="error_login_credential">Este correo electronico no es valido</string>
    <string name="action_login_short">Login</string>
    <string name="error_invalid_email">Este correo electronico no es valido</string>
    <string name="error_invalid_password">La constraseña es muy corta</string>
    <string name="error_incorrect_password">Esta contraseña esta incorrecta</string>
    <string name="error_password_mismatch">La contraseña no concuerda con la confirmacion de la contraseña</string>
    <string name="error_field_required">Este es un campo requerido</string>
    <string name="field_not_entered">N/A</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_settings">Configuracion Personal</string>
    <string name="title_activity_general_settings">Configuracion General</string>
    <string name="title_activity_business_information">Informacion de </string>

    <string name="lorem">
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dui ante, volutpat non commodo non, egestas ut risus. Aenean ultrices massa in arcu maximus, sit amet efficitur dolor placerat. Nullam facilisis quis enim vitae dapibus. Suspendisse potenti. Sed sit amet scelerisque neque. Morbi congue facilisis congue. Nulla sed nibh at metus efficitur mollis. Proin rhoncus aliquam accumsan. Cras maximus odio leo, gravida ultricies erat posuere in. Vestibulum pellentesque diam in lacinia ultrices.

Fusce varius ultrices nibh ac lacinia. Integer posuere ligula sit amet orci commodo tempus. Vestibulum fermentum dolor a eros pulvinar, ut pretium leo dictum. Duis velit ante, porta ac purus ut, consectetur hendrerit orci. Curabitur aliquam ac libero egestas faucibus. Vestibulum imperdiet vestibulum nisi non auctor. Sed pharetra nibh sit amet ultricies sagittis. Donec ut dignissim ligula. Cras tempus augue vitae ex lacinia, vitae rutrum sem facilisis. Nulla gravida risus eget magna consequat, nec sodales est aliquet. Aenean faucibus libero ullamcorper, blandit eros et, egestas sem. Nunc vulputate massa vel ligula iaculis faucibus. Donec congue aliquam placerat. Vestibulum sit amet facilisis libero, sed viverra dui. Mauris eu suscipit ipsum, non lobortis velit.

Phasellus porta ac orci imperdiet ultrices. Suspendisse feugiat accumsan tristique. Proin non diam lobortis, pretium lacus id, imperdiet erat. Nulla consectetur sem eget risus porta bibendum. Etiam nec rutrum est. Integer nulla lacus, sagittis vitae nibh vel, condimentum finibus arcu. Sed nisl ligula, rhoncus quis purus quis, porttitor commodo arcu. Ut euismod, nulla sollicitudin facilisis pretium, ligula elit efficitur sapien, ac dignissim lectus ipsum vitae metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus non ultricies nisl.
    </string>
    <string name="register_text">Registrese</string>
    <string name="login_text">Login</string>
</resources>
