<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jerieshandal.tribies.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#fff">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200sp"
            android:layout_height="70dp"
            android:background="@drawable/tribies_logov1"
            android:contentDescription="Tribies Logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.15"
        android:background="@android:color/holo_red_dark">
        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/register_btn"
            android:text="@string/register_text"
            android:textColor="#424242"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_button_shape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#2ad164"
            android:maxWidth="250dp"
            android:minWidth="150dp" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/login_btn"
            android:text="@string/login_text"
            android:textColor="#424242"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_button_shape"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxWidth="250dp"
            android:minWidth="150dp"
            android:backgroundTint="#FFFFFF" />
    </LinearLayout>
</LinearLayout>
